fix the footer and ui changes

--- a/Post-Operative-Physiotherapy-Healing-Beyond-Surgery.html
+++ b/Post-Operative-Physiotherapy-Healing-Beyond-Surgery.html
@@ -307,69 +307,102 @@
     </main>
     <footer class="bg-dark text-white">
         <div class="container py-5">
-            <div class="row gy-4">
-                <div class="col-md-3">
-                    <img alt="CB Physiotherapy white logo text-white" class="mb-4" src="./assets/image/Logo.webp"
-                        style="height: 48px" />
-                    <p class="text-secondary">A Hub of Rehabilitation & Fitness</p>
-                </div>
-                <div class="col-md-3">
-                    <h4 class="fw-semibold fs-5 mb-4">Quick Links</h4>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html">Home</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html#Services">Services</a>
-                        </li>
-                        <li class="nav-item mt-2">
-                            <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
-                        </li>
+                <div class="row gy-4">
+                    <div class="col-md-3">
+                        <img alt="CB Physiotherapy white logo text-white" class="mb-4" src="./assets/image/Logo.webp"
+                            style="height: 48px" />
+                        <p class="text-secondary">A Hub of Rehabilitation & Fitness</p>
+                    </div>
+                    <div class="col-md-3">
+                        <h4 class="fw-semibold fs-5 mb-4">Quick Links</h4>
+                        <ul class="list-unstyled">
+                            <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html"><i
+                                        class="fas fa-angle-right me-2"></i>Home</a></li>
+                            <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html"><i
+                                        class="fas fa-angle-right me-2"></i>About Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html#Services"><i
+                                        class="fas fa-angle-right me-2"></i>Services</a>
+                            </li>
+                            <li class="nav-item mt-2">
+                                <a class="nav-link" href="index.html#Contact-us"><i
+                                        class="fas fa-angle-right me-2"></i>Contact Us</a>
+                            </li>
 
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
-                    <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
-                    <h4 class="fw-semibold fs-5 mb-4">Contact</h4>
-                    <p class="d-flex align-items-center">
-                        <i class="material-icons me-2">email</i> mittal.sachendra891@gmail.com
-                    </p>
-                    <p class="mt-2 d-flex align-items-center">
-                        <i class="material-icons me-2">call</i> +91-8970227764
-                    </p>
-                    <div class="d-flex gap-1 gap-md-3">
-                        <a href="https://www.instagram.com/mittalsphysiofit/" target="_blank" class="text-white">
-                            <i class="fab fa-instagram fa-lg"></i>
-                        </a>
-                        <a href="https://www.facebook.com/mittal.sachendra891" target="_blank" class="text-white">
-                            <i class="fab fa-brands fa-facebook"></i>
-                        </a>
-                        <a href="https://www.youtube.com/@MMC-Allmedicalsubjects" target="_blank" class="text-white">
-                            <i class="fab fa-youtube fa-lg"></i>
-                        </a>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
+                        <ul class="list-unstyled">
+                            <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                        class="fas fa-angle-right me-2"></i>Home Care</a>
+                            </li>
+                            <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                        class="fas fa-angle-right me-2"></i>Corporate</a>
+                            </li>
+                            <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog"><i
+                                        class="fas fa-angle-right me-2"></i>Blog</a></li>
+                            <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
+                                        class="fas fa-angle-right me-2"></i>Upcoming
+                                    Workshop</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3">
+                        <h4 class="fw-semibold fs-5 mb-4">Contact</h4>
+                        <p class="d-flex align-items-center">
+                            <i class="material-icons me-2">email</i> mittal.sachendra891@gmail.com
+                        </p>
+                        <p class="mt-2 d-flex align-items-center">
+                            <i class="material-icons me-2">call</i> +91-8970227764
+                        </p>
+                        <div class="d-flex gap-1 gap-md-3">
+                            <a href="https://www.instagram.com/mittalsphysiofit/" target="_blank" class="text-white">
+                                <i class="fab fa-instagram fa-lg"></i>
+                            </a>
+                            <a href="https://www.facebook.com/mittal.sachendra891" target="_blank" class="text-white">
+                                <i class="fab fa-brands fa-facebook"></i>
+                            </a>
+                            <a href="https://www.youtube.com/@MMC-Allmedicalsubjects" target="_blank"
+                                class="text-white">
+                                <i class="fab fa-youtube fa-lg"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="bg-gray-900 py-1">
-            <div class="container d-flex justify-content-between align-items-center small text-secondary">
-                <p class="mb-0 text-white">© Copyright 2025 Mittal's Physiofit
-                    All right reserved.</p>
-                <div class="d-flex gap-4">
-                    <p class="text-white">Design &amp; Development By <a
-                            href="https://www.linkedin.com/in/alok-goyal-034082127/">Alok
-                            Goyal</a></p>
+        <div class="bg-gray-900 py-3">
+             <div
+                    class="container d-flex flex-column flex-md-row justify-content-between align-items-center small text-secondary">
+                    <p class="mb-0 text-white text-center text-md-start">
+                        © Copyright 2025 Mittal's Physiofit All rights reserved.
+                    </p>
+                    <!-- hr only visible on mobile -->
+                    <hr class="d-block d-md-none text-white my-2 w-100">
+                    <div class="d-flex gap-2 flex-column flex-md-row text-center text-md-end mt-2 mt-md-0">
+                        <p class="text-white mb-0">
+                            Design &amp; Development By
+                            <a href="https://www.linkedin.com/in/alok-goyal-034082127/" target="_blank"><b
+                                    style="font-size: 16px;">Alok Goyal</b></a>
+                        </p>
+                        <div class="d-flex gap-2 gap-md-3 justify-content-center justify-content-md-end">
+                            <!-- WhatsApp with default message -->
+                            <a href="https://wa.me/919782218108?text=Hello%20Alok%20Goyal%2C%20I%20want%20to%20connect%20with%20you"
+                                target="_blank" class="text-white">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                            </a>
+
+                            <!-- Instagram -->
+                            <a href="https://www.instagram.com/alok_goyal__/" target="_blank" class="text-white">
+                                <i class="fab fa-instagram fa-lg"></i>
+                            </a>
+                            <!-- Facebook -->
+                            <a href="https://www.facebook.com/alok.goyal.92" target="_blank" class="text-white">
+                                <i class="fab fa-facebook fa-lg"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-            </div>
         </div>
     </footer>
 
