--- a/Back-Pain-and-Its-Treatment-Through-Physiotherapy-at-Mittal-Physiofit-Clinic.html
+++ b/Back-Pain-and-Its-Treatment-Through-Physiotherapy-at-Mittal-Physiofit-Clinic.html
@@ -56,14 +56,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-25D80F4N48"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-25D80F4N48');
-</script>
+        gtag('config', 'G-25D80F4N48');
+    </script>
 </head>
 
 <body class="text-dark">
@@ -145,7 +145,7 @@
 
                                         </a>
                                     </li>
-                                     <li>
+                                    <li>
                                         <a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
                                             Exercises
@@ -291,7 +291,7 @@
             </div>
         </article>
     </main>
-     <footer class="bg-dark text-white">
+    <footer class="bg-dark text-white">
         <div class="container py-5">
             <div class="row gy-4">
                 <div class="col-md-3">
@@ -302,14 +302,18 @@
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">Quick Links</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html">Home</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html">About Us</a>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html"><i
+                                    class="fas fa-angle-right me-2"></i>Home</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html"><i
+                                    class="fas fa-angle-right me-2"></i>About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html#Services">Services</a>
+                            <a class="nav-link" href="index.html#Services"><i
+                                    class="fas fa-angle-right me-2"></i>Services</a>
                         </li>
                         <li class="nav-item mt-2">
-                            <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
+                            <a class="nav-link" href="index.html#Contact-us"><i
+                                    class="fas fa-angle-right me-2"></i>Contact Us</a>
                         </li>
 
                     </ul>
@@ -317,10 +321,17 @@
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                    class="fas fa-angle-right me-2"></i>Home Care</a>
+                        </li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare"><i
+                                    class="fas fa-angle-right me-2"></i>Corporate</a>
+                        </li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog"><i
+                                    class="fas fa-angle-right me-2"></i>Blog</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
+                                    class="fas fa-angle-right me-2"></i>Upcoming
+                                Workshop</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -345,14 +356,36 @@
                 </div>
             </div>
         </div>
-        <div class="bg-gray-900 py-1">
-            <div class="container d-flex justify-content-between align-items-center small text-secondary">
-                <p class="mb-0 text-white">© Copyright 2025 Mittal's Physiofit
-                    All right reserved.</p>
-                <div class="d-flex gap-4">
-                    <p class="text-white">Design &amp; Development By <a
-                            href="https://www.linkedin.com/in/alok-goyal-034082127/">Alok
-                            Goyal</a></p>
+        <div class="bg-gray-900 py-3">
+            <div
+                class="container d-flex flex-column flex-md-row justify-content-between align-items-center small text-secondary">
+                <p class="mb-0 text-white text-center text-md-start">
+                    © Copyright 2025 Mittal's Physiofit All rights reserved.
+                </p>
+                <!-- hr only visible on mobile -->
+                <hr class="d-block d-md-none text-white my-2 w-100">
+                <div class="d-flex gap-2 flex-column flex-md-row text-center text-md-end mt-2 mt-md-0">
+                    <p class="text-white mb-0">
+                        Design &amp; Development By
+                        <a href="https://www.linkedin.com/in/alok-goyal-034082127/" target="_blank"><b
+                                style="font-size: 16px;">Alok Goyal</b></a>
+                    </p>
+                    <div class="d-flex gap-2 gap-md-3 justify-content-center justify-content-md-end">
+                        <!-- WhatsApp with default message -->
+                        <a href="https://wa.me/919782218108?text=Hello%20Alok%20Goyal%2C%20I%20want%20to%20connect%20with%20you"
+                            target="_blank" class="text-white">
+                            <i class="fab fa-whatsapp fa-lg"></i>
+                        </a>
+
+                        <!-- Instagram -->
+                        <a href="https://www.instagram.com/alok_goyal__/" target="_blank" class="text-white">
+                            <i class="fab fa-instagram fa-lg"></i>
+                        </a>
+                        <!-- Facebook -->
+                        <a href="https://www.facebook.com/alok.goyal.92" target="_blank" class="text-white">
+                            <i class="fab fa-facebook fa-lg"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
