--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
 
 
     <!-- About Section -->
-    <section class="py-5">
+    <section>
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
@@ -460,14 +460,36 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-gray-900 py-1">
-                <div class="container d-flex justify-content-between align-items-center small text-secondary">
-                    <p class="mb-0 text-white">© Copyright 2025 Mittal's Physiofit
-                        All right reserved.</p>
-                    <div class="d-flex gap-4">
-                        <p class="text-white">Design &amp; Development By <a
-                                href="https://www.linkedin.com/in/alok-goyal-034082127/">Alok
-                                Goyal</a></p>
+            <div class="bg-gray-900 py-3">
+                <div
+                    class="container d-flex flex-column flex-md-row justify-content-between align-items-center small text-secondary">
+                    <p class="mb-0 text-white text-center text-md-start">
+                        © Copyright 2025 Mittal's Physiofit All rights reserved.
+                    </p>
+                    <!-- hr only visible on mobile -->
+                    <hr class="d-block d-md-none text-white my-2 w-100">
+                    <div class="d-flex gap-2 flex-column flex-md-row text-center text-md-end mt-2 mt-md-0">
+                        <p class="text-white mb-0">
+                            Design &amp; Development By
+                            <a href="https://www.linkedin.com/in/alok-goyal-034082127/" target="_blank"><b
+                                    style="font-size: 16px;">Alok Goyal</b></a>
+                        </p>
+                        <div class="d-flex gap-2 gap-md-3 justify-content-center justify-content-md-end">
+                            <!-- WhatsApp with default message -->
+                            <a href="https://wa.me/919782218108?text=Hello%20Alok%20Goyal%2C%20I%20want%20to%20connect%20with%20you"
+                                target="_blank" class="text-white">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                            </a>
+
+                            <!-- Instagram -->
+                            <a href="https://www.instagram.com/alok_goyal__/" target="_blank" class="text-white">
+                                <i class="fab fa-instagram fa-lg"></i>
+                            </a>
+                            <!-- Facebook -->
+                            <a href="https://www.facebook.com/alok.goyal.92" target="_blank" class="text-white">
+                                <i class="fab fa-facebook fa-lg"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
