--- a/requestcallback.html
+++ b/requestcallback.html
@@ -192,6 +192,8 @@
                     <p class="text-center text-muted mb-4">Please Fill The Form</p>
                     <form action="https://api.web3forms.com/submit" method="POST">
                         <input type="hidden" name="access_key" value="f66d53c0-0421-4100-ab8d-c77c25b35e02">
+                        <input type="hidden" name="subject"
+                            value="You Have a New Request Callback Enquiry – Mittal's Physiofit">
                         <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
                         <div class="mb-3 position-relative">
                             <span
@@ -305,14 +307,36 @@
                 </div>
             </div>
         </div>
-        <div class="bg-gray-900 py-1">
-            <div class="container d-flex justify-content-between align-items-center small text-secondary">
-                <p class="mb-0 text-white">© Copyright 2025 Mittal's Physiofit
-                    All right reserved.</p>
-                <div class="d-flex gap-4">
-                    <p class="text-white">Design &amp; Development By <a
-                            href="https://www.linkedin.com/in/alok-goyal-034082127/">Alok
-                            Goyal</a></p>
+        <div class="bg-gray-900 py-3">
+            <div
+                class="container d-flex flex-column flex-md-row justify-content-between align-items-center small text-secondary">
+                <p class="mb-0 text-white text-center text-md-start">
+                    © Copyright 2025 Mittal's Physiofit All rights reserved.
+                </p>
+                <!-- hr only visible on mobile -->
+                <hr class="d-block d-md-none text-white my-2 w-100">
+                <div class="d-flex gap-2 flex-column flex-md-row text-center text-md-end mt-2 mt-md-0">
+                    <p class="text-white mb-0">
+                        Design &amp; Development By
+                        <a href="https://www.linkedin.com/in/alok-goyal-034082127/" target="_blank"><b
+                                style="font-size: 16px;">Alok Goyal</b></a>
+                    </p>
+                    <div class="d-flex gap-2 gap-md-3 justify-content-center justify-content-md-end">
+                        <!-- WhatsApp with default message -->
+                        <a href="https://wa.me/919782218108?text=Hello%20Alok%20Goyal%2C%20I%20want%20to%20connect%20with%20you"
+                            target="_blank" class="text-white">
+                            <i class="fab fa-whatsapp fa-lg"></i>
+                        </a>
+
+                        <!-- Instagram -->
+                        <a href="https://www.instagram.com/alok_goyal__/" target="_blank" class="text-white">
+                            <i class="fab fa-instagram fa-lg"></i>
+                        </a>
+                        <!-- Facebook -->
+                        <a href="https://www.facebook.com/alok.goyal.92" target="_blank" class="text-white">
+                            <i class="fab fa-facebook fa-lg"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
