--- a/index.html
+++ b/index.html
@@ -158,15 +158,21 @@
                                 </ul>
                             </li>
 
-                            <li class="nav-item position-relative">
+                            <!-- <li class="nav-item position-relative">
                                 <a class="nav-link" href="#workshop">
                                     Workshops
-                                </a>
-                                <!-- New badge above -->
-                                <span
+                                </a> -->
+                            <!-- New badge above -->
+                            <!-- <span
                                     class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
                                     New
-                                </span>
+                                </span> -->
+                            <!-- </li> -->
+
+                            <li class="nav-item position-relative">
+                                <a class="nav-link" href="https://www.flatfeetpredictor.com/" target="_self">
+                                    Flat Feet Predictor
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -210,10 +216,18 @@
                     at
                     our clinics or at your home. We've helped thousands of patients to get back to their active life.
                 </p>
-                <a class="btn btn-outline-light btn-lg fw-semibold py-2 px-3 fs-15 mb-3 mb-md-0"
+                <!-- <a class="btn btn-outline-light btn-lg fw-semibold py-2 px-3 fs-15 mb-3 mb-md-0"
                     href="./requestcallback.html">Request Callback</a>
                 <a class="btn btn-teal btn-lg fw-semibold py-2 px-3 me-md-2 mb-3 mb-md-0 fs-15"
-                    href="./bookappoitment.html">Book an Appointment Now</a>
+                    href="./bookappoitment.html">Book an Appointment Now</a> -->
+
+                <div class="d-flex flex-column flex-md-row justify-content-center align-items-center gap-md-3">
+                    <a class="btn btn-outline-light btn-lg fw-semibold py-2 px-3 fs-15 mb-3 mb-md-0"
+                        href="./requestcallback.html">Request Callback</a>
+                    <a class="btn btn-teal btn-lg fw-semibold py-2 px-3 fs-15 mb-3 mb-md-0"
+                        href="./bookappoitment.html">Book an Appointment Now</a>
+                </div>
+
             </div>
         </section>
 
@@ -1691,7 +1705,7 @@
             </div>
         </section>
 
-        <section class="bg-light d-flex align-items-center justify-content-center py-5" id="workshop">
+        <!-- <section class="bg-light d-flex align-items-center justify-content-center py-5" id="workshop">
             <div class="container">
                 <div class="bg-white p-4 p-md-5 rounded shadow-lg w-100">
                     <div class="row g-5">
@@ -1756,7 +1770,7 @@
                         </div>
                     </div>
                 </div>
-        </section>
+        </section> -->
 
         <section class="bg-light d-flex align-items-center justify-content-center py-5" id="Contact-us">
             <div class="container">
@@ -1869,9 +1883,9 @@
                                     class="fas fa-angle-right me-2"></i>Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog"><i
                                     class="fas fa-angle-right me-2"></i>Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
+                        <!-- <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
                                     class="fas fa-angle-right me-2"></i>Upcoming Workshop</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="col-md-3">
