--- a/requestcallback.html
+++ b/requestcallback.html
@@ -155,15 +155,19 @@
                                 </ul>
                             </li>
 
-                            <li class="nav-item position-relative">
+                            <!-- <li class="nav-item position-relative">
                                 <a class="nav-link" href="index.html#workshop">
                                     Workshops
                                 </a>
-                                <!-- New badge above -->
                                 <span
                                     class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
                                     New
                                 </span>
+                            </li> -->
+                            <li class="nav-item position-relative">
+                                <a class="nav-link" href="https://www.flatfeetpredictor.com/" target="_blank">
+                                    Flat Feet Predictor
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -281,8 +285,8 @@
                                     class="fas fa-angle-right me-2"></i>Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog"><i
                                     class="fas fa-angle-right me-2"></i>Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
-                                    class="fas fa-angle-right me-2"></i>Upcoming Workshop</a></li>
+                        <!-- <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
+                                    class="fas fa-angle-right me-2"></i>Upcoming Workshop</a></li> -->
                     </ul>
                 </div>
                 <div class="col-md-3">
