--- a/bookappoitment.html
+++ b/bookappoitment.html
@@ -155,15 +155,19 @@
                                 </ul>
                             </li>
 
-                            <li class="nav-item position-relative">
+                            <!-- <li class="nav-item position-relative">
                                 <a class="nav-link" href="index.html#workshop">
                                     Workshops
                                 </a>
-                                <!-- New badge above -->
                                 <span
                                     class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
                                     New
                                 </span>
+                            </li> -->
+                            <li class="nav-item position-relative">
+                                <a class="nav-link" href="https://www.flatfeetpredictor.com/" target="_blank">
+                                    Flat Feet Predictor
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -190,7 +194,8 @@
                                 <p class="text-center text-muted mb-5">Please Fill The Form</p>
                                 <form action="https://api.web3forms.com/submit" method="POST">
                                     <input type="hidden" name="access_key" value="f66d53c0-0421-4100-ab8d-c77c25b35e02">
-                                    <input type="hidden" name="subject" value="You Have a New Book Appointment Enquiry – Mittal's Physiofit">
+                                    <input type="hidden" name="subject"
+                                        value="You Have a New Book Appointment Enquiry – Mittal's Physiofit">
 
                                     <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
                                     <div class="row g-4">
@@ -339,9 +344,9 @@
                                     class="fas fa-angle-right me-2"></i>Corporate</a></li>
                         <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog"><i
                                     class="fas fa-angle-right me-2"></i>Blog</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
+                        <!-- <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop"><i
                                     class="fas fa-angle-right me-2"></i>Upcoming Workshop</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="col-md-3">
