--- a/index.html
+++ b/index.html
@@ -754,6 +754,7 @@
                 </div>
             </div>
         </section> -->
+
         <!-- <section class="bg-gray-100 py-5">
             <div class="container">
                 <div class="text-center mb-5">
@@ -1634,7 +1635,6 @@
             </div>
         </section>
 
-
         <section class="bg-gray-100 py-5" id="Blog">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center mb-4">
@@ -1770,7 +1770,69 @@
                         </div>
                     </div>
                 </div>
-        </section> -->
+        </section>  -->
+
+        <!-- <section class="bg-light d-flex align-items-center justify-content-center py-5" id="workshop">
+            <div class="container">
+                <div class="bg-white p-4 p-md-5 rounded shadow-lg w-100">
+                    <div class="row g-5">
+                       
+
+                       <div></div>
+                        <div class="col">
+                            <img src="./assets/image/book.jpg" class="w-100" />
+                        </div>
+                    </div>
+                </div>
+        </section>  -->
+
+
+        <!-- ===== Book Release Section ===== -->
+        <section id="book-release" class="py-5 bg-light">
+            <div class="container">
+                <div class="row align-items-center">
+
+                    <!-- Book Image -->
+                    <div class="col-md-5 text-center mb-4 mb-md-0">
+                        <img src="./assets/image/book.jpg" alt="Histology Manual Book"
+                            class="img-fluid shadow rounded-3 border border-2 border-white">
+                    </div>
+
+                    <!-- Book Content -->
+                    <div class="col-md-7">
+                        <h2 class="fw-bold text-primary mb-3">Release of <span class="text-dark">“Histology Manual for
+                                M.B.B.S. First Year Students”</span></h2>
+                        <p class="lead text-secondary">
+                            We are delighted to share the publication of the book <strong>“Histology Manual for M.B.B.S.
+                                First Year Students”</strong> authored by
+                            <strong>Dr. Sachendra Kumar Mittal</strong>, Associate Professor, Department of Anatomy,
+                            ESIC Medical College & Hospital, Jaipur, and published by <strong>MedEnure Medical
+                                Publishers, Jaipur</strong>.
+                        </p>
+                        <p>
+                            This manual is designed to simplify the subject of histology for undergraduate medical
+                            students through clear explanations, labeled microscopic images, and hand-drawn diagrams. It
+                            emphasizes conceptual understanding, visual learning, and exam-oriented content—making it an
+                            essential companion for first-year MBBS students.
+                        </p>
+                        <p>
+                            The book reflects Dr. Mittal’s commitment to innovative, student-friendly teaching, bridging
+                            traditional microscopy with modern visualization techniques. It serves as a valuable
+                            resource for students, educators, and institutions aiming to make histology more interactive
+                            and accessible.
+                        </p>
+                        <div class="alert alert-success mt-3 shadow-sm">
+                            <strong>Congratulations!</strong> to Dr. Sachendra Kumar Mittal on this remarkable academic
+                            contribution toward enhancing medical education and inspiring learners in anatomy and
+                            histology.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ===== End Book Release Section ===== -->
+
+
 
         <section class="bg-light d-flex align-items-center justify-content-center py-5" id="Contact-us">
             <div class="container">
@@ -1944,6 +2006,63 @@
             </div>
         </div>
     </footer>
+
+
+    <!-- ===== Book Release Modal ===== -->
+    <div class="modal fade" id="bookReleaseModal" tabindex="-1" aria-labelledby="bookReleaseModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content border-0 shadow-lg rounded-4">
+
+                <div class="modal-header bg-primary text-white">
+                    <h5 class="modal-title fw-bold" id="bookReleaseModalLabel">
+                        🎉 Book Release: "Histology Manual for M.B.B.S. First Year Students"
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" style="opacity: 1;" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body p-4">
+                    <div class="row align-items-center">
+
+                        <!-- Book Image -->
+                        <div class="col-md-5 text-center mb-3 mb-md-0">
+                            <img src="./assets/image/book.jpg" alt="Histology Manual"
+                                class="img-fluid rounded-3 shadow-sm">
+                        </div>
+
+                        <!-- Book Content -->
+                        <div class="col-md-7">
+                            <h6 class="fw-bold text-primary mb-2">Authored by Dr. Sachendra Kumar Mittal</h6>
+                            <p class="text-muted small mb-3">
+                                Associate Professor, Department of Anatomy, ESIC Medical College & Hospital, Jaipur.<br>
+                                Published by MedEnure Medical Publishers, Jaipur.
+                            </p>
+                            <p>
+                                This manual simplifies histology for MBBS students with high-resolution images,
+                                hand-drawn diagrams, and concise exam-oriented content. Designed for conceptual clarity
+                                and visual learning, it’s a must-have companion for first-year medical students.
+                            </p>
+                            <div class="alert alert-success py-2 mb-0">
+                                Congratulations to <strong>Dr. Mittal</strong> on this outstanding academic
+                                contribution!
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="modal-footer justify-content-center">
+                    <button type="button" id="knowMoreBtn" class="btn btn-primary px-4">Know More</button>
+                    <button type="button" class="btn btn-secondary px-4" data-bs-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- ===== End Modal ===== -->
+
+
     <script crossorigin="anonymous" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -1973,6 +2092,32 @@
             headingElement.innerHTML = headings[event.to];
         });
     </script>
+
+
+    <!-- Book Relase -->
+   <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    // Always show the modal when page loads
+    var bookModal = new bootstrap.Modal(document.getElementById('bookReleaseModal'));
+    bookModal.show();
+
+    // Handle "Know More" button click
+    document.getElementById("knowMoreBtn").addEventListener("click", function () {
+      var modalElement = document.getElementById('bookReleaseModal');
+      var modalInstance = bootstrap.Modal.getInstance(modalElement);
+      modalInstance.hide(); // Close modal
+
+      // Wait a bit for closing animation, then scroll
+      setTimeout(() => {
+        const bookSection = document.getElementById("book-release");
+        if (bookSection) {
+          bookSection.scrollIntoView({ behavior: "smooth" });
+        }
+      }, 400);
+    });
+  });
+</script>
+
 
 </body>
 
