--- a/gallery.html
+++ b/gallery.html
@@ -199,18 +199,19 @@
                                     </li>
                                 </ul>
                             </li>
-                            <!-- <li class="nav-item position-relative">
-                                <a class="nav-link" href="index.html#workshop">Workshops</a>
-                                <span
-                                    class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
-                                    New
-                                </span>
-                            </li> -->
                             <li class="nav-item position-relative">
                                 <a class="nav-link" href="https://www.flatfeetpredictor.com/" target="_blank">
                                     Flat Feet Predictor
                                 </a>
                             </li>
+                            <li class="nav-item position-relative">
+                                <a class="nav-link" href="index.html#workshop">Workshops</a>
+                                <span
+                                    class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
+                                    New
+                                </span>
+                            </li>
+                            
                         </ul>
                     </div>
                 </div>
