--- a/index.html
+++ b/index.html
@@ -1814,6 +1814,10 @@
                             contribution toward enhancing medical education and inspiring learners in anatomy and
                             histology.
                         </div>
+                        <a href="https://www.flipkart.com/product/p/itme?pid=9789349437531&lid=LSTBOK9789349437531U9YLEF&_refId=&_appId=WA&_refId=&_appId=CL" target="_blank"
+                            class="btn btn-success px-4">
+                            🛒 Order Now
+                        </a>
                     </div>
                 </div>
             </div>
@@ -2042,6 +2046,11 @@
 
                 <div class="modal-footer justify-content-center">
                     <button type="button" id="knowMoreBtn" class="btn btn-primary px-4">Know More</button>
+                    <!-- ✅ New Order Button -->
+                    <a href="https://www.flipkart.com/product/p/itme?pid=9789349437531&lid=LSTBOK9789349437531U9YLEF&_refId=&_appId=WA&_refId=&_appId=CL" target="_blank"
+                        class="btn btn-success px-4">
+                        🛒 Order Now
+                    </a>
                     <button type="button" class="btn btn-secondary px-4" data-bs-dismiss="modal">Close</button>
                 </div>
 
