--- a/about.html
+++ b/about.html
@@ -159,9 +159,29 @@
                                     Flat Feet Predictor
                                 </a>
                             </li>
+                            <!-- <li class="nav-item position-relative">
+                                <a class="nav-link" href="index.html#workshop">
+                                    Workshops
+                                </a>
+                                <span
+                                    class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
+                                    New
+                                </span>
+                            </li> -->
+
                             <li class="nav-item position-relative">
                                 <a class="nav-link" href="index.html#workshop">
                                     Workshops
+                                </a>
+                                <!-- New badge above -->
+                                <!-- <span
+                                    class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
+                                    New
+                                </span> -->
+                            </li>
+                            <li class="nav-item position-relative">
+                                <a class="nav-link" href="index.html#hiring" target="_self">
+                                    Hiring
                                 </a>
                                 <span
                                     class="badge bg-danger position-absolute top-0 start-100 translate-middle p-2 border border-light rounded-circle animate-ping">
